--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@
   border: 5px solid;
   padding: 10px;
   border-style: double;
-  /* background-color: snow; */
   font-family: cursive;
 }
 .summary {
@@ -62,7 +61,16 @@ tr {
   width: 400px;
 }
 #place-order {
-  margin-top: 300px;
+  /* margin-top: 350px; */
+  margin-left: 140px;
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: LIGHTSKYBLUE;
+  font-size: 20px;
+  position: fixed;
+  bottom: 35px;
 }
 .item-no {
   width: 60px;
@@ -90,6 +98,25 @@ tr {
 .delete {
   float: right;
   margin-top: 9px;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  border: none;
+  font-weight: 700;
+}
+.delete:hover {
+  animation: one 0.4s linear;
+  animation-fill-mode: forwards;
+  color: red;
+}
+
+@keyframes one {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(180deg);
+  }
 }
 
 @media screen and (max-width: 480px) {
